# trimo

./: .gitignore  index.html  inspect-db.mjs  package-lock.json  package.json  release.ps1  seed.mjs  vite.config.ts
.github/: copilot-instructions.md
.github/prompts/: generate-tests.prompt.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-push
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: apps.rs  ignored.rs  mod.rs  monitoring.rs  notifications.rs  preferences.rs  usage.rs
src-tauri/src/helpers/: mod.rs  name_helper.rs
src-tauri/src/logo/: extractor.rs  mod.rs  placeholder.rs
src-tauri/src/process/: enumerator.rs  filter.rs  idle.rs  mod.rs
src-tauri/tests/: filter.rs  name_helper.rs
src/components/apps/: AppFilterBar.tsx  AppsList.tsx
src/components/apps/app-item/: AppDetailsModal.tsx  AppItem.tsx  DailyUsageChart.tsx  DailyUsageTable.tsx  ModalHeader.tsx  NotificationSection.tsx
src/components/apps/period-selector/: PeriodSelector.tsx
src/components/charts/: TrendChart.tsx  UsageChart.tsx
src/components/dashboard/: ActiveApps.tsx  DashboardLayout.tsx  GoalProgress.tsx  TodaySummary.tsx  TrackingStatus.tsx  UpdateToast.tsx
src/components/settings/: AppNotifications.tsx  Settings.tsx
src/components/ui/: Select.tsx  ToggleRow.tsx
src/helpers/: app-stats.ts  format-time.ts  image-convert.tsx  name-truncate.tsx
src/store/: AppDataContext.tsx  appStore.ts  settingsStore.ts
src/tests/: app-stats.test.ts  format-time.test.ts
src/types/: App.interface.ts
